Added Open Telemetry with ELK, Grafana, rate limiter