@@ -13,10 +13,11 @@
     <artifactId>springboot-aws-dynamodb-lambda-sns-sqs-fanout</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
+    <description>Demo Spring Boot Open Telemery DynamoDB, Lambda, SNS, SQS</description>
 
     <modules>
-        <module>dynamodb-lambda-function</module>
         <module>ticket-producer</module>
+        <module>dynamodb-lambda-function</module>
         <module>sport-ticket-consumer</module>
         <module>movie-ticket-consumer</module>
     </modules>
@@ -24,14 +25,33 @@
     <properties>
         <java.version>21</java.version>
         <amazon-awssdk.version>2.29.3</amazon-awssdk.version>
+        <aws-lambda-java-core.version>1.2.3</aws-lambda-java-core.version>
+        <aws-lambda-java-events.version>3.14.0</aws-lambda-java-events.version>
+        <spring-boot-aop.version>3.4.0</spring-boot-aop.version>
         <spring-cloud-aws.version>3.2.1</spring-cloud-aws.version>
-        <testcontainers.version>1.19.3</testcontainers.version>
+        <spring-cloud.version>2023.0.3</spring-cloud.version>
+        <spring-boot-thin-layout.version>1.0.31.RELEASE</spring-boot-thin-layout.version>
         <logstash-logback-encoder.version>8.0</logstash-logback-encoder.version>
+        <logback-ecs-encoder.version>1.6.0</logback-ecs-encoder.version>
         <springdoc-openapi.version>2.6.0</springdoc-openapi.version>
+        <springdoc-openapi-starter-webmvc-ui>2.4.0</springdoc-openapi-starter-webmvc-ui>
+        <opentelemetry-bom.version>1.43.0</opentelemetry-bom.version>
+        <opentelemetry-instrumentation-bom.version>2.10.0</opentelemetry-instrumentation-bom.version>
+        <opentelemetry.logback.appender.version>2.9.0-alpha</opentelemetry.logback.appender.version>
+        <maven-surefire-plugin.version>3.1.0</maven-surefire-plugin.version>
+        <testcontainers.version>1.19.3</testcontainers.version>
+        <spotless.version>2.44.2</spotless.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom</artifactId>
@@ -43,6 +63,20 @@
                 <groupId>io.awspring.cloud</groupId>
                 <artifactId>spring-cloud-aws-dependencies</artifactId>
                 <version>${spring-cloud-aws.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.opentelemetry</groupId>
+                <artifactId>opentelemetry-bom</artifactId>
+                <version>${opentelemetry-bom.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.opentelemetry.instrumentation</groupId>
+                <artifactId>opentelemetry-instrumentation-bom</artifactId>
+                <version>${opentelemetry-instrumentation-bom.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -59,6 +93,7 @@
 						<env>
 							<BP_JVM_VERSION>${java.version}</BP_JVM_VERSION>
 						</env>
+                        <name>${project.groupId}/${project.artifactId}:${project.version}</name>
 					</image>
 					<excludes>
 						<exclude>
@@ -68,6 +103,34 @@
 					</excludes>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.diffplug.spotless</groupId>
+                <artifactId>spotless-maven-plugin</artifactId>
+                <version>${spotless.version}</version>
+                <configuration>
+                    <java>
+                        <googleJavaFormat/>
+                    </java>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>format</id>
+                        <goals>
+                            <goal>check</goal>
+                            <goal>apply</goal>
+                        </goals>
+                        <phase>process-sources</phase>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 
